<resources>
    <string name="app_name">MyCalc</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="square">a²</string>
    <string name="div">/</string>
    <string name="mul">X</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
    <string name="_00">00</string>
    <string name="input_text">1+2</string>
    <string name="set_dark_theme">set dark theme</string>
    <string name="set_default_theme">set default theme</string>
    <string name="settings">SETTINGS</string>
    <string name="accept_and_close">accept and close</string>
</resources>