<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="50sp"
        android:textAlignment="textEnd"
        android:layout_margin="10dp" />

    <GridLayout
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rowCount="5"
        android:columnCount="4">
        <!-- 1st line-->
        <Button
            android:id="@+id/btn_clear"
            android:layout_columnWeight="1"
            android:text="@string/c"
            android:background="@drawable/func_button_round"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_square"
            android:layout_columnWeight="1"
            android:text="@string/square"
            android:background="@drawable/func_button_round"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_divide"
            android:layout_columnWeight="1"
            android:text="@string/div"
            android:background="@drawable/func_button_round"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_multiply"
            android:layout_columnWeight="1"
            android:text="@string/mul"
            android:background="@drawable/func_button_round"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />
        <!-- 2nd line-->
        <Button
            android:id="@+id/btn_7"
            android:layout_columnWeight="1"
            android:text="@string/_7"
            android:background="@drawable/num_button_round"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_columnWeight="1"
            android:text="@string/_8"
            android:background="@drawable/num_button_round"
            android:layout_column="1"
            android:layout_row="1"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_9"
            android:layout_columnWeight="1"
            android:text="@string/_9"
            android:background="@drawable/num_button_round"
            android:layout_column="2"
            android:layout_row="1"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_columnWeight="1"
            android:text="@string/minus"
            android:background="@drawable/func_button_round"
            android:layout_column="3"
            android:layout_row="1"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <!-- 3rd line -->
        <Button
            android:id="@+id/btn_4"
            android:layout_columnWeight="1"
            android:text="@string/_4"
            android:background="@drawable/num_button_round"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_5"
            android:layout_columnWeight="1"
            android:text="@string/_5"
            android:background="@drawable/num_button_round"
            android:layout_column="1"
            android:layout_row="2"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_6"
            android:layout_columnWeight="1"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:background="@drawable/num_button_round"
            android:text="@string/_6" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_columnWeight="1"
            android:text="@string/plus"
            android:background="@drawable/func_button_round"
            android:layout_column="3"
            android:layout_row="2"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <!--4th line-->


        <Button
            android:id="@+id/btn_1"
            android:layout_columnWeight="1"
            android:text="@string/_1"
            android:background="@drawable/num_button_round"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_2"
            android:layout_columnWeight="1"
            android:text="@string/_2"
            android:background="@drawable/num_button_round"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_3"
            android:layout_columnWeight="1"
            android:text="@string/_3"
            android:background="@drawable/num_button_round"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_equals"
            android:layout_columnWeight="1"
            android:layout_row="3"
            android:background="@drawable/equal_button_round"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:layout_gravity="fill_vertical"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:text="@string/equals" />

        <!-- 5th line -->
        <Button
            android:id="@+id/btn_dot"
            android:layout_columnWeight="1"
            android:text="@string/dot"
            android:background="@drawable/num_button_round"
            android:layout_column="0"
            android:layout_row="4"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_0"
            android:layout_columnWeight="1"
            android:text="@string/_0"
            android:background="@drawable/num_button_round"
            android:layout_column="1"
            android:layout_row="4"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

        <Button
            android:id="@+id/btn_00"
            android:layout_columnWeight="1"
            android:text="@string/_00"
            android:background="@drawable/num_button_round"
            android:layout_column="2"
            android:layout_row="4"
            android:layout_marginTop="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp" />

    </GridLayout>


</LinearLayout>